--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,105 @@
 ---
-name: Module-Build
-version: 0.3500_01
+abstract: 'Build and install Perl modules'
 author:
   - 'Ken Williams <kwilliams@cpan.org>'
-  - |-
-    Development questions, bug reports, and patches should be sent to the
-    Module-Build mailing list at <module-build@perl.org>.
-abstract: Build and install Perl modules
-license: perl
-resources:
-  MailingList: mailto:module-build@perl.org
-  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
-  homepage: http://sourceforge.net/projects/module-build
-  license: http://dev.perl.org/licenses/
-  repository: http://svn.perl.org/modules/Module-Build/
+  - "Development questions, bug reports, and patches should be sent to the\nModule-Build mailing list at <module-build@perl.org>."
 build_requires:
   File::Temp: 0.15
   Test::Harness: 3.16
   Test::More: 0.49
+generated_by: 'Module::Build version 0.3503'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Module-Build
+provides:
+  Module::Build:
+    file: lib/Module/Build.pm
+    version: 0.35_03
+  Module::Build::Base:
+    file: lib/Module/Build/Base.pm
+    version: 0.35_03
+  Module::Build::Compat:
+    file: lib/Module/Build/Compat.pm
+    version: 0.35_03
+  Module::Build::Config:
+    file: lib/Module/Build/Config.pm
+    version: 0.35_03
+  Module::Build::Cookbook:
+    file: lib/Module/Build/Cookbook.pm
+    version: 0.35_03
+  Module::Build::Dumper:
+    file: lib/Module/Build/Dumper.pm
+    version: 0.35_03
+  Module::Build::ModuleInfo:
+    file: lib/Module/Build/ModuleInfo.pm
+    version: 0.35_03
+  Module::Build::Notes:
+    file: lib/Module/Build/Notes.pm
+    version: 0.35_03
+  Module::Build::PPMMaker:
+    file: lib/Module/Build/PPMMaker.pm
+    version: 0.35_03
+  Module::Build::Platform::Amiga:
+    file: lib/Module/Build/Platform/Amiga.pm
+    version: 0.35_03
+  Module::Build::Platform::Default:
+    file: lib/Module/Build/Platform/Default.pm
+    version: 0.35_03
+  Module::Build::Platform::EBCDIC:
+    file: lib/Module/Build/Platform/EBCDIC.pm
+    version: 0.35_03
+  Module::Build::Platform::MPEiX:
+    file: lib/Module/Build/Platform/MPEiX.pm
+    version: 0.35_03
+  Module::Build::Platform::MacOS:
+    file: lib/Module/Build/Platform/MacOS.pm
+    version: 0.35_03
+  Module::Build::Platform::RiscOS:
+    file: lib/Module/Build/Platform/RiscOS.pm
+    version: 0.35_03
+  Module::Build::Platform::Unix:
+    file: lib/Module/Build/Platform/Unix.pm
+    version: 0.35_03
+  Module::Build::Platform::VMS:
+    file: lib/Module/Build/Platform/VMS.pm
+    version: 0.35_03
+  Module::Build::Platform::VOS:
+    file: lib/Module/Build/Platform/VOS.pm
+    version: 0.35_03
+  Module::Build::Platform::Windows:
+    file: lib/Module/Build/Platform/Windows.pm
+    version: 0.35_03
+  Module::Build::Platform::aix:
+    file: lib/Module/Build/Platform/aix.pm
+    version: 0.35_03
+  Module::Build::Platform::cygwin:
+    file: lib/Module/Build/Platform/cygwin.pm
+    version: 0.35_03
+  Module::Build::Platform::darwin:
+    file: lib/Module/Build/Platform/darwin.pm
+    version: 0.35_03
+  Module::Build::Platform::os2:
+    file: lib/Module/Build/Platform/os2.pm
+    version: 0.35_03
+  Module::Build::PodParser:
+    file: lib/Module/Build/PodParser.pm
+    version: 0.35_03
+  Module::Build::Version:
+    file: lib/Module/Build/Version.pm
+    version: 0.77
+  Module::Build::YAML:
+    file: lib/Module/Build/YAML.pm
+    version: 1.40
+recommends:
+  Archive::Tar: 1.08
+  ExtUtils::CBuilder: 0.260301
+  ExtUtils::Install: 0.3
+  ExtUtils::ParseXS: 2.21
+  Module::Signature: 0.21
+  Pod::Readme: 0.04
+  version: 0.74
 requires:
   Cwd: 0
   Data::Dumper: 0
@@ -31,110 +113,15 @@ requires:
   File::Path: 0
   File::Spec: 0.82
   Getopt::Long: 0
-  IO::File: 0
+  IO::File: 1.13
   Test::Harness: 0
   Text::Abbrev: 0
   Text::ParseWords: 0
   perl: 5.006001
-recommends:
-  Archive::Tar: 1.08
-  ExtUtils::CBuilder: 0.15
-  ExtUtils::Install: 0.3
-  ExtUtils::ParseXS: 1.02
-  Module::Signature: 0.21
-  Pod::Readme: 0.04
-  version: 0.74
-provides:
-  Module::Build:
-    file: lib/Module/Build.pm
-    version: 0.3500_01
-  Module::Build::Base:
-    file: lib/Module/Build/Base.pm
-    version: 0.3500_01
-  Module::Build::Compat:
-    file: lib/Module/Build/Compat.pm
-    version: 0.3500_01
-  Module::Build::Config:
-    file: lib/Module/Build/Config.pm
-    version: 0.3500_01
-  Module::Build::Cookbook:
-    file: lib/Module/Build/Cookbook.pm
-    version: 0.3500_01
-  Module::Build::Dumper:
-    file: lib/Module/Build/Dumper.pm
-    version: 0.3500_01
-  Module::Build::ModuleInfo:
-    file: lib/Module/Build/ModuleInfo.pm
-    version: 0.3500_01
-  Module::Build::Notes:
-    file: lib/Module/Build/Notes.pm
-    version: 0.3500_01
-  Module::Build::PPMMaker:
-    file: lib/Module/Build/PPMMaker.pm
-    version: 0.3500_01
-  Module::Build::Platform::Amiga:
-    file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.3500_01
-  Module::Build::Platform::Default:
-    file: lib/Module/Build/Platform/Default.pm
-    version: 0.3500_01
-  Module::Build::Platform::EBCDIC:
-    file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.3500_01
-  Module::Build::Platform::MPEiX:
-    file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.3500_01
-  Module::Build::Platform::MacOS:
-    file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.3500_01
-  Module::Build::Platform::RiscOS:
-    file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.3500_01
-  Module::Build::Platform::Unix:
-    file: lib/Module/Build/Platform/Unix.pm
-    version: 0.3500_01
-  Module::Build::Platform::VMS:
-    file: lib/Module/Build/Platform/VMS.pm
-    version: 0.3500_01
-  Module::Build::Platform::VOS:
-    file: lib/Module/Build/Platform/VOS.pm
-    version: 0.3500_01
-  Module::Build::Platform::Windows:
-    file: lib/Module/Build/Platform/Windows.pm
-    version: 0.3500_01
-  Module::Build::Platform::aix:
-    file: lib/Module/Build/Platform/aix.pm
-    version: 0.3500_01
-  Module::Build::Platform::cygwin:
-    file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.3500_01
-  Module::Build::Platform::darwin:
-    file: lib/Module/Build/Platform/darwin.pm
-    version: 0.3500_01
-  Module::Build::Platform::os2:
-    file: lib/Module/Build/Platform/os2.pm
-    version: 0.3500_01
-  Module::Build::PodParser:
-    file: lib/Module/Build/PodParser.pm
-    version: 0.3500_01
-  Module::Build::Version:
-    file: lib/Module/Build/Version.pm
-    version: 0.77
-  Module::Build::YAML:
-    file: lib/Module/Build/YAML.pm
-    version: 0.50
-  UNIVERSAL:
-    file: lib/Module/Build/Version.pm
-    version: 1.04
-  version:
-    file: lib/Module/Build/Version.pm
-    version: 0.77
-  version::vpp:
-    file: lib/Module/Build/Version.pm
-    version: 0.77
-  warnings:
-    file: lib/Module/Build/Version.pm
-generated_by: Module::Build version 0.350001
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+resources:
+  MailingList: mailto:module-build@perl.org
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build
+  homepage: http://sourceforge.net/projects/module-build
+  license: http://dev.perl.org/licenses/
+  repository: http://svn.perl.org/modules/Module-Build/
+version: 0.35_03
