--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   File::Temp: 0.15
   Test::Harness: 3.16
   Test::More: 0.49
-generated_by: 'Module::Build version 0.3508'
+generated_by: 'Module::Build version 0.3509'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,76 +16,76 @@ name: Module-Build
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Config:
     file: lib/Module/Build/Config.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Dumper:
     file: lib/Module/Build/Dumper.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::ModuleInfo:
     file: lib/Module/Build/ModuleInfo.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Notes:
     file: lib/Module/Build/Notes.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::cygwin:
     file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Platform::os2:
     file: lib/Module/Build/Platform/os2.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::PodParser:
     file: lib/Module/Build/PodParser.pm
-    version: 0.35_08
+    version: 0.35_09
   Module::Build::Version:
     file: lib/Module/Build/Version.pm
     version: 0.77
@@ -94,10 +94,10 @@ provides:
     version: 1.40
   inc::latest:
     file: lib/inc/latest.pm
-    version: 0.35_08
+    version: 0.35_09
   inc::latest::private:
     file: lib/inc/latest/private.pm
-    version: 0.35_08
+    version: 0.35_09
 recommends:
   ExtUtils::Install: 0.3
   ExtUtils::Manifest: 1.54
@@ -105,9 +105,11 @@ recommends:
 requires:
   Cwd: 0
   Data::Dumper: 0
+  ExtUtils::CBuilder: 0.27
   ExtUtils::Install: 0
   ExtUtils::Manifest: 0
   ExtUtils::Mkbootstrap: 0
+  ExtUtils::ParseXS: 2.21
   File::Basename: 0
   File::Compare: 0
   File::Copy: 0
@@ -126,4 +128,4 @@ resources:
   homepage: http://sourceforge.net/projects/module-build
   license: http://dev.perl.org/licenses/
   repository: http://svn.perl.org/modules/Module-Build/
-version: 0.35_08
+version: 0.35_09
