--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ configure_requires:
   Module::Metadata: 1.000002
   Perl::OSType: 1
   version: 0.87
-generated_by: 'Module::Build version 0.3621'
+generated_by: 'Module::Build version 0.3622'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,76 +20,76 @@ name: Module-Build
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Config:
     file: lib/Module/Build/Config.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Dumper:
     file: lib/Module/Build/Dumper.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::ModuleInfo:
     file: lib/Module/Build/ModuleInfo.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Notes:
     file: lib/Module/Build/Notes.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::cygwin:
     file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Platform::os2:
     file: lib/Module/Build/Platform/os2.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::PodParser:
     file: lib/Module/Build/PodParser.pm
-    version: 0.36_21
+    version: 0.3622
   Module::Build::Version:
     file: lib/Module/Build/Version.pm
     version: 0.87
@@ -98,10 +98,10 @@ provides:
     version: 1.41
   inc::latest:
     file: lib/inc/latest.pm
-    version: 0.36_21
+    version: 0.3622
   inc::latest::private:
     file: lib/inc/latest/private.pm
-    version: 0.36_21
+    version: 0.3622
 recommends:
   ExtUtils::Install: 0.3
   ExtUtils::Manifest: 1.54
@@ -134,4 +134,4 @@ resources:
   MailingList: mailto:module-build@perl.org
   license: http://dev.perl.org/licenses/
   repository: http://github.com/dagolden/module-build/
-version: 0.36_21
+version: 0.3622
