--- a/META.yml
+++ b/META.yml
@@ -5,13 +5,15 @@ author:
   - "Development questions, bug reports, and patches should be sent to the\nModule-Build mailing list at <module-build@perl.org>."
 build_requires:
   File::Temp: 0.15
+  Parse::CPAN::Meta: 1.420
   Test::Harness: 3.16
   Test::More: 0.49
 configure_requires:
   Module::Metadata: 1.000002
   Perl::OSType: 1
   version: 0.87
-generated_by: 'Module::Build version 0.3624'
+dynamic_config: 1
+generated_by: 'Module::Build version 0.3701, CPAN::Meta::Converter version 2.110330'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,76 +22,76 @@ name: Module-Build
 provides:
   Module::Build:
     file: lib/Module/Build.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Base:
     file: lib/Module/Build/Base.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Compat:
     file: lib/Module/Build/Compat.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Config:
     file: lib/Module/Build/Config.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Cookbook:
     file: lib/Module/Build/Cookbook.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Dumper:
     file: lib/Module/Build/Dumper.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::ModuleInfo:
     file: lib/Module/Build/ModuleInfo.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Notes:
     file: lib/Module/Build/Notes.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::PPMMaker:
     file: lib/Module/Build/PPMMaker.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::Amiga:
     file: lib/Module/Build/Platform/Amiga.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::Default:
     file: lib/Module/Build/Platform/Default.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::EBCDIC:
     file: lib/Module/Build/Platform/EBCDIC.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::MPEiX:
     file: lib/Module/Build/Platform/MPEiX.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::MacOS:
     file: lib/Module/Build/Platform/MacOS.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::RiscOS:
     file: lib/Module/Build/Platform/RiscOS.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::Unix:
     file: lib/Module/Build/Platform/Unix.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::VMS:
     file: lib/Module/Build/Platform/VMS.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::VOS:
     file: lib/Module/Build/Platform/VOS.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::Windows:
     file: lib/Module/Build/Platform/Windows.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::aix:
     file: lib/Module/Build/Platform/aix.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::cygwin:
     file: lib/Module/Build/Platform/cygwin.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::darwin:
     file: lib/Module/Build/Platform/darwin.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Platform::os2:
     file: lib/Module/Build/Platform/os2.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::PodParser:
     file: lib/Module/Build/PodParser.pm
-    version: 0.3624
+    version: 0.37_01
   Module::Build::Version:
     file: lib/Module/Build/Version.pm
     version: 0.87
@@ -98,16 +100,15 @@ provides:
     version: 1.41
   inc::latest:
     file: lib/inc/latest.pm
-    version: 0.3624
+    version: 0.37_01
   inc::latest::private:
     file: lib/inc/latest/private.pm
-    version: 0.3624
+    version: 0.37_01
 recommends:
   ExtUtils::Install: 0.3
   ExtUtils::Manifest: 1.54
-  version: 0.74
 requires:
-  CPAN::Meta::YAML: 0.002
+  CPAN::Meta: 2.110330
   Cwd: 0
   Data::Dumper: 0
   ExtUtils::CBuilder: 0.27
@@ -131,7 +132,7 @@ requires:
   perl: 5.006001
   version: 0.87
 resources:
-  MailingList: mailto:module-build@perl.org
   license: http://dev.perl.org/licenses/
   repository: http://github.com/dagolden/module-build/
-version: 0.3624
+  x_MailingList: mailto:module-build@perl.org
+version: 0.37_01
